# classical-gravity-sim

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: pages.yml
sim/: simulation.hpp
src/: main.cpp
wasm/: exports.cpp
web/: editorpanel.js  index.html  script.js  simulation.js  style.css
web/js/: control-panel.js  main.js  physics.js  render.js  simulation.js  state.js  wasm.js
